@@ -1,3 +1,9 @@
+2001-02-23  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/ui.c (export_html_selected_file, save_selected_file): destroy
+	and NULLify file_sel. fixes bug #51269.
+	made most dialogs modal.
+
 2001-02-20  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/gtkhex.c (gtk_hex_size_request): take offset column into
